corrected alignCenter for image elements

--- a/css/layout.css
+++ b/css/layout.css
@@ -360,5 +360,7 @@ ul.bigLinks li a:hover span.desc {
 }
 
 .alignCenter {
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
